// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cancelProcessInstance throws an exception when workflowInstanceKey is malformed 1`] = `
[Error: 
		  processInstanceKey is malformed, value : hello-world
		  ]
`;

exports[`cancelWorkflowInstance throws an exception when workflowInstanceKey is malformed 1`] = `
[Error: 
		  workflowInstanceKey is malformed, value : hello-world
		  ]
`;
